--- a/App_custo_viagem_com_SQLITE/App_custo_viagem_com_SQLITE/App_custo_viagem_com_SQLITE.csproj
+++ b/App_custo_viagem_com_SQLITE/App_custo_viagem_com_SQLITE/App_custo_viagem_com_SQLITE.csproj
@@ -16,6 +16,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="View\" />
+    <Compile Update="View\Cadastro.xaml.cs">
+      <DependentUpon>Cadastro.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="View\Cadastro.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\Lista.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
