--- a/App_custo_viagem_com_SQLITE/App_custo_viagem_com_SQLITE/App_custo_viagem_com_SQLITE.csproj
+++ b/App_custo_viagem_com_SQLITE/App_custo_viagem_com_SQLITE/App_custo_viagem_com_SQLITE.csproj
@@ -11,21 +11,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="View\Cadastro.xaml.cs">
-      <DependentUpon>Cadastro.xaml</DependentUpon>
+    <Compile Update="View\FormularioPedagio.xaml.cs">
+      <DependentUpon>FormularioPedagio.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="View\Cadastro.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="View\Lista.xaml">
+    <EmbeddedResource Update="View\FormularioPedagio.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
